scripts/nullaway/nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Status.java:7: error: [NullAway] initializer method does not guarantee @NonNull field status (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Status() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Request.java:15: error: [NullAway] initializer method does not guarantee @NonNull fields method (line 9), url (line 11), protocol (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Request() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Method.java:7: error: [NullAway] initializer method does not guarantee @NonNull field method (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Method() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Url.java:9: error: [NullAway] initializer method does not guarantee @NonNull fields path (line 5), extension (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Url() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Protocol.java:9: error: [NullAway] initializer method does not guarantee @NonNull fields protocol (line 5), version (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Protocol() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Path.java:7: error: [NullAway] initializer method does not guarantee @NonNull field path (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Path() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Extension.java:7: error: [NullAway] initializer method does not guarantee @NonNull field extension (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Extension() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:13: error: [NullAway] initializer method does not guarantee @NonNull field date (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Date() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return format;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:45: error: [NullAway] dereferenced expression format is @Nullable
        return "[" + format.format(date.getTime()) + "]";
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/Record.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields userIp (line 11), userTime (line 13), request (line 15), userStatus (line 17), size (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Record() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/forFile/Reader.java:23: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
12 errors
